peac_dev/force-app/main/default/objects/Asset__c/fields/Additional_Copies__c.field-meta.xml
<CustomField>
    <fullName>Additional_Copies__c</fullName>
    <label>Additional Copies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>