peac_dev/force-app/main/default/objects/Asset__c/fields/ADS_Class_Life_in_Months__c.field-meta.xml
<CustomField>
    <fullName>ADS_Class_Life_in_Months__c</fullName>
    <label>ADS Class Life in Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>