peac_dev/force-app/main/default/objects/Asset__c/fields/Amount_of_Title_Registration__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Title_Registration__c</fullName>
    <label>Amount of Title &amp; Registration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>