peac_dev/force-app/main/default/objects/Asset__c/fields/AMT_Depreciation_Basis__c.field-meta.xml
<CustomField>
    <fullName>AMT_Depreciation_Basis__c</fullName>
    <label>AMT Depreciation Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>