peac_dev/force-app/main/default/objects/Asset__c/fields/Asset_CurrentUser_Profile__c.field-meta.xml
<CustomField>
    <fullName>Asset_CurrentUser_Profile__c</fullName>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset CurrentUser Profile</label>
    <type>Text</type>
</CustomField>