peac_dev/force-app/main/default/objects/Asset__c/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detailed Equipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>