peac_dev/force-app/main/default/objects/Asset__c/fields/Asset_Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Asset_Rental_Amount__c</fullName>
    <inlineHelpText>The rental amount prorated to the asset based on the asset percentage of the overall contract</inlineHelpText>
    <label>Asset Rental Amount (old)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>