peac_dev/force-app/main/default/objects/Asset__c/fields/Asset_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Status__c</fullName>
    <label>Asset Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>Small</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>