peac_dev/force-app/main/default/objects/Asset__c/fields/Begin_Depreciation_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Depreciation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Begin Depreciation Date</label>
    <type>Date</type>
</CustomField>