peac_dev/force-app/main/default/objects/Asset__c/fields/Bonus_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Depreciation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bonus Depreciation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>