peac_dev/force-app/main/default/objects/Asset__c/fields/Business_Type_Non_Municipal__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Non_Municipal__c</fullName>
    <formula>IF(TEXT( Opportunity__r.Business_Type__c ) = &apos;Municipal&apos;, &apos;Municipal&apos;, &apos;Non-Municipal&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type(Non Municipal)</label>
    <type>Text</type>
</CustomField>