peac_dev/force-app/main/default/objects/Asset__c/fields/Calculate_ACE_Depr__c.field-meta.xml
<CustomField>
    <fullName>Calculate_ACE_Depr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate ACE Depr</label>
    <type>Checkbox</type>
</CustomField>