peac_dev/force-app/main/default/objects/Asset__c/fields/Calculate_AMT__c.field-meta.xml
<CustomField>
    <fullName>Calculate_AMT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate AMT Depr</label>
    <type>Checkbox</type>
</CustomField>