peac_dev/force-app/main/default/objects/Asset__c/fields/City_Code__c.field-meta.xml
<CustomField>
    <fullName>City_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City Location Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>