peac_dev/force-app/main/default/objects/Asset__c/fields/City_Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>City_Tax_Percentage__c</fullName>
    <label>City Tax Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>