peac_dev/force-app/main/default/objects/Asset__c/fields/City_Transit_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>City_Transit_Tax_Amount__c</fullName>
    <label>City Transit Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>