peac_dev/force-app/main/default/objects/Asset__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Vehicle Class</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>