peac_dev/force-app/main/default/objects/Asset__c/fields/Contracted_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Cycle__c</fullName>
    <label>Contracted Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Semi-Annually</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Annually</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>