peac_dev/force-app/main/default/objects/Asset__c/fields/Contracted_Thru_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Thru_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contracted Thru Date</label>
    <type>Date</type>
</CustomField>