peac_dev/force-app/main/default/objects/Asset__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <inlineHelpText>Value will default from Opportunity on First Asset</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>