peac_dev/force-app/main/default/objects/Asset__c/fields/Cost_over_250k__c.field-meta.xml
<CustomField>
    <fullName>Cost_over_250k__c</fullName>
    <formula>IF(  Opportunity__r.Equipment_Cost__c  &gt; 250000, true, false)</formula>
    <label>Cost over 250k</label>
    <type>Checkbox</type>
</CustomField>