peac_dev/force-app/main/default/objects/Asset__c/fields/County_Code__c.field-meta.xml
<CustomField>
    <fullName>County_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>County Location Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>