peac_dev/force-app/main/default/objects/Asset__c/fields/CSC_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>CSC_Amount_Tax__c</fullName>
    <label>CSC Amount (Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>