peac_dev/force-app/main/default/objects/Asset__c/fields/CSC_Amount_Tax_included_in_Finc_Amt__c.field-meta.xml
<CustomField>
    <fullName>CSC_Amount_Tax_included_in_Finc_Amt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSC Amount (Tax) included in Finc Amt?</label>
    <type>Checkbox</type>
</CustomField>