peac_dev/force-app/main/default/objects/Asset__c/fields/Dealer_Check__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Check__c</fullName>
    <formula>IF(Opportunity__r.Dealer_Name1__c = &apos;PBP TECH&apos;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Check</label>
    <type>Text</type>
</CustomField>