peac_dev/force-app/main/default/objects/Asset__c/fields/Dealer_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Read_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Read Date</label>
    <type>Date</type>
</CustomField>