peac_dev/force-app/main/default/objects/Asset__c/fields/Dealer_Residual__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Residual__c</fullName>
    <description>SAL-4829</description>
    <label>Dealer Residual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>