peac_dev/force-app/main/default/objects/Asset__c/fields/Department_Location__c.field-meta.xml
<CustomField>
    <fullName>Department_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will be displayed on the invoice</inlineHelpText>
    <label>Department Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>