peac_dev/force-app/main/default/objects/Asset__c/fields/Disclosure_Language__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Language__c</fullName>
    <formula>IF(
    AND(
        Opportunity__r.Account_Business_State_Province__c = &quot;CA&quot;,
        ISPICKVAL(Opportunity__r.Purchase_Options__c, &quot;1.00 Out&quot;)
    ) ||
    AND(
        Opportunity__r.Account_Business_State_Province__c = &quot;NY&quot;,
        ISPICKVAL(Opportunity__r.Purchase_Options__c, &quot;1.00 Out&quot;)
    ) ||
    AND(
        Opportunity__r.Account_Business_State_Province__c = &quot;FL&quot;,
        ISPICKVAL(Opportunity__r.Purchase_Options__c, &quot;1.00 Out&quot;)
    ) ||
    AND(
        Opportunity__r.Account_Business_State_Province__c = &quot;GA&quot;,
        ISPICKVAL(Opportunity__r.Purchase_Options__c, &quot;1.00 Out&quot;)
    ) ||
    AND(
        Opportunity__r.Account_Business_State_Province__c = &quot;SD&quot;,
        ISPICKVAL(Opportunity__r.Purchase_Options__c, &quot;1.00 Out&quot;)
    ) ||
    AND(
        Opportunity__r.Account_Business_State_Province__c = &quot;KS&quot;,
        ISPICKVAL(Opportunity__r.Purchase_Options__c, &quot;1.00 Out&quot;)
    ),
    &quot;A STATE DISCLOSURE FORM IS REQUIRED&quot;,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disclosure Language</label>
    <type>Text</type>
</CustomField>