peac_dev/force-app/main/default/objects/Asset__c/fields/End_User_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>End_User_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Want to utilize the Business address from the opportunity? If yes, check this box and select save. If not, provide the alternative address.</inlineHelpText>
    <label>End User Business Address?</label>
    <type>Checkbox</type>
</CustomField>