peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Address_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Street 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>