peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Address__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Address__c</fullName>
    <formula>Equipment_Street__c + Equipment_City__c + TEXT(Equipment_State__c) + Equipment_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Address</label>
    <type>Text</type>
</CustomField>