peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_City__c.field-meta.xml
<CustomField>
    <fullName>Equipment_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>