peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Code__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Code__c</fullName>
    <label>Equipment Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Equipment_Code</valueSetName>
    </valueSet>
</CustomField>