peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Code_Backup__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Code_Backup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Code Backup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>