peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Discount__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Discount__c</fullName>
    <label>Equipment Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>