peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Full_Address__c</fullName>
    <formula>Equipment_Street__c &amp; &quot; &quot; &amp; Equipment_City__c  &amp; &quot;, &quot;&amp; TEXT(Equipment_State__c) &amp; &quot; &quot; &amp; Equipment_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Full Address</label>
    <type>Text</type>
</CustomField>