peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_ID_Cat_Class__c.field-meta.xml
<CustomField>
    <fullName>Equipment_ID_Cat_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment ID (Cat Class)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>