peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>