peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Street__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Street__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>