peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Sub_Category__c</fullName>
    <label>Equipment Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Equipment_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Equipment_Sub_Category</valueSetName>
    </valueSet>
</CustomField>