peac_dev/force-app/main/default/objects/Asset__c/fields/Equipment_Zip__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>