peac_dev/force-app/main/default/objects/Asset__c/fields/Estimate_Readings_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Readings_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimate Readings Allowed</label>
    <type>Checkbox</type>
</CustomField>