peac_dev/force-app/main/default/objects/Asset__c/fields/Federal_Calculation_Basis__c.field-meta.xml
<CustomField>
    <fullName>Federal_Calculation_Basis__c</fullName>
    <label>Federal Calculation Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>