peac_dev/force-app/main/default/objects/Asset__c/fields/Federal_Convention__c.field-meta.xml
<CustomField>
    <fullName>Federal_Convention__c</fullName>
    <label>Federal Convention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Facts &amp; Circum</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>ADR 1/2 Year</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>ADR Mod 1/2 Year</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ACRS Reg</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>ACRS S/L</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>ADR S/L</label>
            </value>
            <value>
                <fullName>6</fullName>
                <default>true</default>
                <label>MACRS</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>MACRS Mid-Month</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Daily Convention</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Monthly Convention</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>1/2 Year Convention</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Mid Month</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Flat Rate</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>CCA</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>CCA Half Year</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>UK</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>UK Luxury Car</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>