peac_dev/force-app/main/default/objects/Asset__c/fields/Federal_Life__c.field-meta.xml
<CustomField>
    <fullName>Federal_Life__c</fullName>
    <label>Federal Life</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>