peac_dev/force-app/main/default/objects/Asset__c/fields/Federal_Method__c.field-meta.xml
<CustomField>
    <fullName>Federal_Method__c</fullName>
    <label>Federal Depreciation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>14</fullName>
                <label>0.25</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>150% DDB</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>150% DDB - 50% Bonus</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>150% DDB - No Bonus</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>200% DDB</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>200% DDB - 50% Bonus</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>200% DDB - No Bonus</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>DDB Non 1/2</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Diminish Value</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>DV/SL Optimization</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>DV-With Limit</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Expensed</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Foreign 10%</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Prime Cost</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Prin Reduction</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>S/L - 50% Bonus</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>S/L - No Bonus</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>S/L Non 1/2</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>S/L Non 1/2 (2)</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Straight Line</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Straight Line - International</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>S/L - 80% Bonus</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>150% DDB - 80% Bonus</label>
            </value>
            <value>
                <fullName>58</fullName>
                <default>true</default>
                <label>200% DDB - 80% Bonus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>