peac_dev/force-app/main/default/objects/Asset__c/fields/Financed_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Financed_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Financed Trigger</label>
    <type>Checkbox</type>
</CustomField>