peac_dev/force-app/main/default/objects/Asset__c/fields/First_Record__c.field-meta.xml
<CustomField>
    <fullName>First_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Record</label>
    <type>Checkbox</type>
</CustomField>