peac_dev/force-app/main/default/objects/Asset__c/fields/FL_Doc_Stamp_Fee__c.field-meta.xml
<CustomField>
    <fullName>FL_Doc_Stamp_Fee__c</fullName>
    <formula>IF(
   TEXT(Equipment_State__c) = &quot;FL&quot;,
   (List_Price__c * Opportunity__r.Rate_Factor__c)/100*0.35,
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Equipment State = Florida, (List Price * Rate Factor) / 100 * 0.35</inlineHelpText>
    <label>FL Doc Stamp Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>