peac_dev/force-app/main/default/objects/Asset__c/fields/Google_Map__c.field-meta.xml
<CustomField>
    <fullName>Google_Map__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?f=q&amp;hl=en&amp;q=&quot; +  Equipment_Street__c +  Equipment_City__c  + TEXT( Equipment_State__c ) +  Equipment_Zip__c + &quot;&amp;om=1&quot;, &quot;Google Map&quot; )</formula>
    <label>Google Map</label>
    <type>Text</type>
</CustomField>