peac_dev/force-app/main/default/objects/Asset__c/fields/IL_Upfront_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>IL_Upfront_Tax_Code__c</fullName>
    <formula>IF(

  OR(
    TEXT(Upfront_Tax_Code__c) = &quot;050&quot;,
    TEXT(Upfront_Tax_Code__c) = &quot;036&quot;,
    TEXT(Upfront_Tax_Code__c) = &quot;031&quot;
  ),

  null,
  
  TEXT(Upfront_Tax_Code__c)

)</formula>
    <inlineHelpText>The value held in this field is the Upfront Tax Code that will be sent to Infolease. When the tax code is 050, 031 or 036, the value passed to Infolease is null.</inlineHelpText>
    <label>IL Upfront Tax Code</label>
    <type>Text</type>
</CustomField>