peac_dev/force-app/main/default/objects/Asset__c/fields/Insurance_Aggregate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Aggregate_Amount__c</fullName>
    <label>Insurance Aggregate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>